Updated Coppermine script installer to version 1.4.12, PhpWiki to 1.3.14, TextPattern to 4.0.5, osCommerce to 2.2rc1, SugarCRM to 4.5.1e, phpPgAdmin to 4.1.3, phpMyAdmin to 2.10.3, Joomla to 10.0.13, and Mantis to 1.0.8.
Webalizer statistics are now included in cPanel migrations.
Added a script installer for Mephisto, a Ruby on Rails Blog.
Ruby on Rails script directories are now protected from regular web access via a .htaccess file, as they are always accessed via a proxy.
Added an installer for Radiant, a Ruby on Rails content management system. Unfortunately it can only be reliably installed at the top level of a virtual server's web directory.
When a virtual server is deleted, all Mongrel server processes for Ruby on Rails applications associated with it are stopped, and prevented from starting at boot time.
Added checks for gcc and make to the Ruby on Rails script installers (needed to compile the MySQL driver), and make checking for commands by scripts more generic.
Added a restriction to the Edit Owner Limits page to prevent the creation of catchall email aliases.
Added fields to the autoreply section of the alias and user email forwarding pages to limit the date range on which replies are sent.
Added a Module Config option to delete aliases when email is disabled for a domain.
---- Changes since 3.44 ----
Updated phpBB script installer to allow a choice of the 3.0 and 2.0 versions.
Updated the Drupal script installer to versions 5.2 and 4.7.7.
Added an option on the Edit Owner Limits page to prevent use of the HTML editor.
Added a script installer for the PostNuke CMS.
AWstats statistics are now included in cPanel migrations.
The real name of a virtual server's Unix user is updated when the server's description is changed.
Added a link from the Mail Aliases page to manually edit aliases in a domain using a text box. This makes bulk changes and copies simpler.